# phdkit

./: .gitignore  LICENSE  README.md  TODO.md  format.py  hatch_hooks.py  main.py  pyproject.toml
.cursor/rules/: project-structure.mdc  tips.mdc
.github/instructions/: guidelines.instuctions.md  project-structure.instructions.md
.github/workflows/: ci.yml
design/: configlib_reader.md
hatch_hooks/: build.hatch_hook.py  metadata.hatch_hook.py
src/phdkit/: __init__.py  autoretry.py  infix.py  infix_fn.py  mid.py  prompt.py  util.py
src/phdkit/alg/: __init__.py  interval_tree.py
src/phdkit/batching/: __init__.py
src/phdkit/configlib/: __init__.py  configreader.py  configurable.py  configurable_fn.py  tomlreader.py
src/phdkit/gplot/: __init__.py
src/phdkit/log/: __init__.py  logger.py  notifier.py
src/phdkit/mapreduce/: __init__.py
src/phdkit/pbar/: __init__.py
src/phdkit/plot/: __init__.py
src/phdkit/rich/: __init__.py  lenient_time_remaining.py  subshell_mod.py
src/phdkit/tqdm/: __init__.py
tests/: EMAIL_FIX_SUMMARY.md  README_EMAIL_TESTS.md  __init__.py  manual_email_test.py  test_autoretry.py  test_configlib.py  test_email_notifier.py  test_infix_fn.py  test_interval_tree.py  test_lenient_time_remaining.py  test_prompt_template.py  test_util.py
