[project]
name = "phdkit"
version = "0.1.2"
description = "Scripting utilities for PhD students, including logging with email notification, task batching, plotting, and more."
# readme = "README.md"
dynamic = ["readme"]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "rich>=14.1.0",
]
authors = [
    { name="Chuyang Chen", email="chuyangchen2018@outlook.com"}
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/cychen2021/phdkit"

[build-system]
requires = ["hatchling", "ziggy-pydust @ git+https://github.com/cychen2021/ziggy-pydust.git"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["zig/*.zig"]

[tool.hatch.build.targets.wheel]
include = ["*.so"]

[[tool.pydust.ext_module]]
name = "intv_tree"
root = "zig/intv_tree.zig"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pydust==0.1.2"
]

[tool.hatch.metadata.hooks.custom]
path = "hatch_hooks/metadata.hatch_hook.py"

[tool.hatch.build.hooks.custom]
path = "hatch_hooks/build.hatch_hook.py"
